Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17741

sanity-krb5 test_5: lsvcgssd should restart automatically

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      This issue was created by maloo for S Buisson <sbuisson@ddn.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/0c1f5585-4639-46c8-8507-4fa4d7b2e344

      test_5 failed with the following error:

      /usr/sbin/lsvcgssd should restart automatically
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/104054 - 5.14.0-362.18.1.el9_3.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/104054 - 5.14.0-362.18.1_lustre.el9.x86_64

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-krb5 test_5 - /usr/sbin/lsvcgssd should restart automatically

      Attachments

        Issue Links

          Activity

            People

              sebastien Sebastien Buisson
              maloo Maloo
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: